--- a/BLOG.html
+++ b/BLOG.html
@@ -123,6 +123,6 @@
     </div> 
     
     <script src="/Users/teddymoss/Downloads/jquery-1.11.3.min.js"></script>
-    <script src="/Users/teddymoss/Documents/PolisBlog/BLOG.js"></script>
+    <script src="/Users/teddymoss/Documents/JS for Blog/BLOG.js"></script>
   </body>
 </html>
